--- a/deploy.worker.yml
+++ b/deploy.worker.yml
@@ -1,6 +1,6 @@
 ---
 - name: "Provision worker instance"
-  hosts: "54.186.42.110"
+  hosts: localhost
   gather_facts: False
   pre_tasks:
     - name: Gather worker Role specific instance configuration
@@ -22,6 +22,8 @@
         vpc_subnet_id: "{{vpc_subnet_id}}"
         assign_public_ip: yes
       register: ec2
+    - set_fact:
+        ec2: "{{ec2}}"
     - debug: msg="{{ec2}}"
     - name: Add new instance to host group
       add_host:
@@ -54,7 +56,7 @@
       }
 
 - name: "Configure worker role"
-  hosts: just_created
+  hosts: localhost
   tasks:
     - name: "Wait for host to contact cloudera manager server"
       pause:
@@ -85,5 +87,6 @@
         cm_password: "{{cm_password}}"
         hostname: "{{ item.private_dns_name }}"
         template_name: "m3-medium-worker"
+      with_items: "{{ ec2.instances }}"
       register: template
     - debug: msg="{{template}}"
